# whatsapp-rust

./: .dockerignore  .gitignore  AGENTS.md  BAD_MAC_FIX.md  BUG_FIX_SECOND_MESSAGE.md  Cargo.toml  DUPLICATE_MESSAGE_FIX.md  Dockerfile  LID_GROUP_FIX_SUMMARY.md  LID_TEST_COVERAGE.md  PERFORMANCE_RESULTS.md  README.md  README_WASM.md  STORAGE_REFACTORING.md  WASM.md  build.rs  build.sh  demo.db  demo.html  dhat-heap-before-pr552.json  diesel.toml  package.json  test.db  test_multi.db
http_clients/ureq-client/: Cargo.toml
http_clients/ureq-client/src/: lib.rs
storages/redb-storage/: Cargo.toml
storages/redb-storage/src/: keys.rs  lib.rs  redb_store.rs  schema.rs  types.rs
storages/sqlite-storage/: Cargo.toml
storages/sqlite-storage/migrations/2025-12-11-000000_add_lid_pn_mapping/: down.sql  up.sql
storages/sqlite-storage/migrations/2025-12-24-000000_add_base_keys/: down.sql  up.sql
storages/sqlite-storage/migrations/2025-12-24-000001_add_device_registry/: down.sql  up.sql
storages/sqlite-storage/migrations/2025-12-24-000002_add_sender_key_status/: down.sql  up.sql
storages/sqlite-storage/migrations/2025-12-24-000003_add_device_registry_updated_at_index/: down.sql  up.sql
storages/sqlite-storage/migrations/2026-03-12-000000_add_next_pre_key_id/: down.sql
storages/sqlite-storage/migrations/2026-03-23-000000_add_nct_salt/: down.sql
storages/sqlite-storage/migrations/2026-03-26-000000_unified_sender_key_devices/: up.sql
storages/sqlite-storage/src/: device_aware_store.rs  lib.rs  schema.rs  sqlite_store.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: app_state.rs  chat_actions.rs  chatstate_ttl.rs  community.rs  concurrent_disconnect.rs  connection.rs  device_cache.rs  digest_key.rs  groups.rs  lid_sessions.rs  media.rs  memory_soak.rs  messaging.rs  newsletter.rs  offline_events.rs  offline_groups.rs  offline_messages.rs  offline_receipts.rs  prekey_sessions.rs  presence.rs  privacy_tokens.rs  profile.rs  profile_picture.rs  receipts.rs  retry_dm_multidevice.rs  session_reuse.rs
transports/tokio-transport/: Cargo.toml  README.md
transports/tokio-transport/src/: lib.rs
wacore/: Cargo.toml  build.rs
wacore-wasm/: Cargo.toml
wacore-wasm/src/: lib.rs  signal_repo.rs  store.rs
wacore-wasm/tests/: integration.rs
wacore/appstate/: Cargo.toml
wacore/appstate/src/: decode.rs  encode.rs  errors.rs  hash.rs  keys.rs  lib.rs  lthash.rs  patch_decode.rs  processor.rs  push.rs
wacore/benches/: lock_key_benchmark.rs  reporting_token_benchmark.rs  send_receive_benchmark.rs
wacore/binary/: Cargo.toml  build.rs
wacore/binary/benches/: binary_benchmark.rs  numeric_attr_benchmark.rs
wacore/binary/src/: attrs.rs  builder.rs  decoder.rs  encoder.rs  error.rs  jid.rs  lib.rs  marshal.rs  node.rs  token.rs  util.rs  wasm_api.rs  zlib_pool.rs
wacore/derive/: Cargo.toml
wacore/derive/src/: lib.rs
wacore/libsignal/: Cargo.toml
wacore/libsignal/benches/: libsignal_benchmark.rs
wacore/noise/: Cargo.toml
wacore/noise/src/: framing.rs  handshake.rs  lib.rs  state.rs
wacore/src/: adv.rs  appstate_sync.rs  client.rs  client_profile.rs  companion_reg.rs  crypto.rs  download.rs  framing.rs  handshake.rs  history_sync.rs  ib.rs  lib.rs  media_retry.rs  message_processing.rs  messages.rs  net.rs  pair.rs  pair_code.rs  poll.rs  prekeys.rs  proto_helpers.rs  protocol.rs  reporting_token.rs  request.rs  runtime.rs  send.rs  sticker_pack.rs  time.rs  upload.rs  usync.rs  wasm_api.rs  wasm_types.rs  webp.rs  xml.rs  zip.rs
wacore/src/appstate/: decode.rs  errors.rs  hash.rs  keys.rs  lthash.rs  mod.rs  patch_decode.rs  processor.rs  snapshot.rs  snapshot_stream.rs  sync.rs
wacore/src/binary/: attrs.rs  builder.rs  consts.rs  decoder.rs  encoder.rs  error.rs  mod.rs  node.rs  token.rs  util.rs  xml.rs
wacore/src/client/: context.rs
wacore/src/crypto/: cbc.rs  gcm.rs  hkdf.rs  hmac_sha512.rs  mod.rs  xed25519.rs
wacore/src/handshake/: edge_routing.rs  mod.rs  noise.rs  state.rs  utils.rs
wacore/src/iq/: blocklist.rs  business.rs  chatstate.rs  contacts.rs  devices.rs  dirty.rs  groups.rs  keepalive.rs  mediaconn.rs  mex.rs  mex_ids.rs  mod.rs  newsletter.rs  node.rs  passive.rs  prekeys.rs  privacy.rs  profile.rs  props.rs  spam_report.rs  spec.rs  tctoken.rs  usync.rs
wacore/src/libsignal/: mod.rs
wacore/src/protocol/: keepalive.rs  mod.rs  retry.rs
wacore/src/signal/: mod.rs  protocol.rs  ratchet.rs  root_key.rs  sender_key_name.rs  session.rs  skdm_parser.rs  store.rs
wacore/src/stanza/: business.rs  call.rs  devices.rs  groups.rs  mod.rs  notification.rs  receipt.rs
wacore/src/store/: ab_props.rs  adapter.rs  cache.rs  commands.rs  device.rs  error.rs  in_memory.rs  mod.rs  persistence.rs  signal_cache.rs  traits.rs
wacore/src/types/: call.rs  events.rs  jid.rs  lid_pn.rs  message.rs  mod.rs  newsletter.rs  presence.rs  public.rs  spam_report.rs  user.rs
wacore/tests/: appstate_external_mutations_test.rs  appstate_mac_test.rs  appstate_processor_test.rs  binary_optimization_test.rs  binary_protocol_test.rs  crypto_compatibility_test.rs  crypto_test.rs  jid_test.rs  noise_handshake_test.rs  send_addressing_tests.rs  string_enum_serde_test.rs
waproto/: Cargo.toml  build.rs
waproto/src/: lib.rs  voip.proto  voip.rs  whatsapp.desc  whatsapp.proto  whatsapp.rs
whatsapp-ui/: Cargo.toml  README.md
whatsapp-ui/src/: main.rs  theme.rs  utils.rs
whatsapp-ui/src/app/: calls.rs  chats.rs  messages.rs  mod.rs
whatsapp-ui/src/audio/: call_audio.rs  call_media_pipeline.rs  encoder.rs  mod.rs  player.rs  recorder.rs  waveform.rs
whatsapp-ui/src/client/: media_callback.rs  mod.rs  whatsapp.rs
whatsapp-ui/src/components/: call_popup.rs  chat_header.rs  chat_item.rs  chat_list.rs  input_area_view.rs  message_bubble.rs  message_list.rs
whatsapp-ui/src/state/: app_state.rs  call.rs  chat.rs  events.rs  mod.rs
whatsapp-ui/src/video/: audio.rs  player.rs  streaming.rs
whatsapp-ui/src/views/: chat.rs  loading.rs  mod.rs  pairing.rs
whatsapp-uniffi/: Cargo.toml  build.rs
whatsapp-uniffi/src/: lib.rs  whatsapp.udl
(+488 files in other folders)
