
[package]
name = "whatsapp-rust"
version = "0.2.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
readme = "README.md"
description = "Rust client for WhatsApp Web"

[workspace]
members = [
    ".",
    "http_clients/ureq-client",
    "storages/sqlite-storage",
    "transports/tokio-transport",
    "wacore",
    "wacore/appstate",
    "wacore/binary",
    "wacore/libsignal",
    "waproto",
    "whatsapp-ui",
]

[workspace.dependencies]
flate2 = { version = "1.1.5", default-features = false, features = ["zlib-rs"] }
rand = "0.9"
rand_core = "0.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false }
wacore-appstate = { path = "./wacore/appstate", version = "0.2.0" }
wacore-binary = { path = "./wacore/binary", version = "0.2.0" }
waproto = { path = "./waproto", version = "0.2.0" }

[features]
danger-skip-tls-verify = ["whatsapp-rust-tokio-transport?/danger-skip-tls-verify"]
default = ["sqlite-storage", "tokio-transport", "ureq-client", "tokio-native"]
ureq-client = ["dep:whatsapp-rust-ureq-http-client"]
tokio-transport = ["dep:whatsapp-rust-tokio-transport"]
signal = ["tokio/signal"]
sqlite-storage = ["whatsapp-rust-sqlite-storage"]
tokio-native = ["tokio/rt-multi-thread"]

[dependencies]

anyhow = { version = "1.0", default-features = false }
async-channel = "2.5.0"
async-trait = "0.1.89"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bytes = { version = "1.5", default-features = false }

# Time handling
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dashmap = "6.1.0"
env_logger = { version = "0.11", default-features = false }
hex = { version = "0.4", features = ["alloc"], default-features = false }
indexmap = { version = "2.12.1", features = ["serde"] }
log = "0.4.27"
moka = { version = "0.12.12", features = ["future"] }
prost = { version = "0.14.1", default-features = false }

# Cryptography
hkdf = "0.12.3"
rand = { workspace = true }
rand_core = { workspace = true }
sha2 = "0.10"
scopeguard = "1.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
wacore = { path = "./wacore", version = "0.2.0" }
wacore-binary = { workspace = true }
waproto = { workspace = true }
whatsapp-rust-sqlite-storage = { path = "./storages/sqlite-storage", version = "0.2.0", optional = true }
whatsapp-rust-tokio-transport = { path = "./transports/tokio-transport", version = "0.2.0", optional = true }
whatsapp-rust-ureq-http-client = { path = "./http_clients/ureq-client", version = "0.2.0", optional = true }
zeroize = { version = "1.8.2", features = ["derive"] }
aes = "0.8.4"
ctr = "0.9.2"
hmac = "0.12.1"
sha1 = "0.10.6"
crc = "3.4.0"

# WebRTC for call media transport
webrtc = "0.14.0"
regex = "1.11"
futures = "0.3.31"

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

# Benchmark profile: optimized but without aggressive LTO that breaks iai-callgrind
[profile.bench]
inherits = "release"
lto = "thin"
debug = 1
strip = false

# Profiling profile: optimized with debug symbols for heaptrack/valgrind
[profile.profiling]
inherits = "release"
debug = 2          # Full debug info for stack traces
strip = false      # Keep symbols
lto = false        # Disable LTO for faster builds and better traces
opt-level = 2      # Still optimized but not aggressive

# Patch gpui to use forked version with YUV surface support
# This ensures gpui-component uses the same gpui version as whatsapp-ui
[patch.crates-io]
gpui = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "gpui" }
# Also patch gpui-component to use main branch which may have newer GPUI API support
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component.git" }

# Patch zed-industries/zed to use our forked version (for gpui-component's git dependency)
[patch."https://github.com/zed-industries/zed"]
gpui = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "gpui" }
collections = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "collections" }
util = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "util" }
util_macros = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "util_macros" }
sum_tree = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "sum_tree" }
refineable = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "refineable" }
derive_refineable = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "derive_refineable" }
gpui_macros = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "gpui_macros" }
http_client = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "http_client" }
perf = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "perf" }
zlog = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "zlog" }
ztracing = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "ztracing" }

