
[package]
name = "whatsapp-rust"
version = "0.5.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
readme = "README.md"
description = "Rust client for WhatsApp Web"

[workspace]
members = [
    ".",
    "http_clients/ureq-client",
    "storages/sqlite-storage",
    "tests/bench-integration",
    "tests/e2e",
    "transports/tokio-transport",
    "wacore",
    "wacore/appstate",
    "wacore/binary",
    "wacore/derive",
    "wacore/libsignal",
    "wacore/noise",
    "waproto",
    "whatsapp-ui",
]
default-members = [
    ".",
    "http_clients/ureq-client",
    "storages/sqlite-storage",
    "transports/tokio-transport",
    "wacore",
    "wacore/appstate",
    "wacore/binary",
    "wacore/derive",
    "wacore/libsignal",
    "wacore/noise",
    "waproto",
    "whatsapp-ui",
]

[workspace.dependencies]
# Shared dependencies
aes = "0.9.0"
aes-gcm = { version = "0.11.0-rc.3", default-features = false, features = ["aes", "alloc", "bytes"] }
anyhow = { version = "1.0", default-features = false }
async-channel = { version = "2.5.0", default-features = false, features = ["std"] }
async-lock = { version = "3", default-features = false }
async-trait = "0.1.89"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bytemuck = { version = "1.22", default-features = false }
bytes = { version = "1.5", default-features = false }
chrono = { version = "0.4", default-features = false }
compact_str = { version = "0.9", default-features = false }
ctr = { version = "0.10", default-features = false }
env_logger = { version = "0.11", default-features = false }
event-listener = { version = "5", default-features = false }
flate2 = { version = "1.1.5", default-features = false, features = ["zlib-rs"] }
futures = { version = "0.3", default-features = false, features = ["alloc", "async-await"] }
getrandom = { version = "0.4", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
hkdf = { version = "0.13.0", default-features = false }
hmac = { version = "0.13.0", default-features = false }
iai-callgrind = "0.16"
itoa = "1"
log = "0.4"
portable-atomic = { version = "1", default-features = false, features = ["fallback"] }
prost = { version = "0.14.3", default-features = false, features = ["std"] }
prost-build = { version = "0.14.3", default-features = false }
rand = "0.10"
rand_core = "0.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde-big-array = "0.5"
serde_json = { version = "1.0", default-features = false }
sha1 = { version = "0.11.0", default-features = false }
sha2 = { version = "0.11.0", default-features = false }
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false }
uuid = { version = "1", default-features = false }

# Internal workspace crates
wacore = { path = "./wacore", default-features = false, version = "0.5.0" }
wacore-appstate = { path = "./wacore/appstate", default-features = false, version = "0.5.0" }
wacore-binary = { path = "./wacore/binary", default-features = false, version = "0.5.0" }
wacore-derive = { path = "./wacore/derive", version = "0.5.0" }
wacore-libsignal = { path = "./wacore/libsignal", version = "0.5.0" }
wacore-noise = { path = "./wacore/noise", version = "0.5.0" }
waproto = { path = "./waproto", version = "0.5.0" }
yoke = { version = "0.7", features = ["derive"] }

[features]
debug-diagnostics = ["wacore/debug-diagnostics"]
debug-snapshots = ["wacore/debug-snapshots"]
danger-skip-tls-verify = ["whatsapp-rust-tokio-transport?/danger-skip-tls-verify"]
default = [
    "moka-cache",
    "simd",
    "sqlite-storage",
    "tokio-transport",
    "tokio-runtime",
    "ureq-client",
    "tokio-native",
    "signal",
]
moka-cache = ["dep:moka"]
simd = ["wacore/simd"]
ureq-client = ["dep:whatsapp-rust-ureq-http-client"]
tokio-transport = ["dep:whatsapp-rust-tokio-transport"]
tokio-runtime = ["dep:tokio"]
signal = ["tokio-runtime", "tokio/signal"]
sqlite-storage = ["whatsapp-rust-sqlite-storage"]
tokio-native = ["tokio-runtime", "tokio/rt-multi-thread"]

[dependencies]
aes = "0.8.4"
anyhow = { workspace = true }
async-channel = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde"] }
crc = "3.4.0"
ctr = "0.9.2"
dashmap = "6.1.0"
env_logger = { workspace = true }
event-listener = { workspace = true }
futures = { workspace = true, features = ["std"] }
hex = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
itoa = { workspace = true }
log = { workspace = true }
moka = { version = "0.12.12", features = ["future"], optional = true }
portable-atomic = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
regex = "1.11"
scopeguard = "1.2"
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
sha1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"], optional = true }
wacore = { workspace = true }
wacore-binary = { workspace = true }
waproto = { workspace = true }

webrtc = "0.14.0"
whatsapp-rust-sqlite-storage = { path = "./storages/sqlite-storage", version = "0.5.0", optional = true }
whatsapp-rust-tokio-transport = { path = "./transports/tokio-transport", version = "0.5.0", optional = true }
whatsapp-rust-ureq-http-client = { path = "./http_clients/ureq-client", version = "0.5.0", optional = true }
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
uuid = { workspace = true, features = ["v4"] }

[[example]]
name = "benchmark"
required-features = ["danger-skip-tls-verify"]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

# Benchmark profile: optimized but without aggressive LTO that breaks iai-callgrind
[profile.bench]
inherits = "release"
lto = "thin"
debug = 1
strip = false

# Profiling: optimized with debug symbols for DHAT / heaptrack / perf / valgrind
[profile.profiling]
inherits = "release"
debug = 2
strip = false
lto = false
opt-level = 2

# gpui-component tracks a specific zed commit in its Cargo.lock but declares
# `gpui = { git = ".../zed" }` without a rev, so by default cargo would pull
# whatever is on zed main (and zed main has since removed APIs gpui-component
# still uses). Pin to the commit gpui-component CI builds against.
[patch."https://github.com/zed-industries/zed"]
gpui = { git = "https://github.com/jlucaso1/zed.git", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5", package = "gpui" }
gpui_platform = { git = "https://github.com/jlucaso1/zed.git", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5", package = "gpui_platform" }
gpui_macros = { git = "https://github.com/jlucaso1/zed.git", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5", package = "gpui_macros" }
collections = { git = "https://github.com/jlucaso1/zed.git", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5", package = "collections" }
util = { git = "https://github.com/jlucaso1/zed.git", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5", package = "util" }
util_macros = { git = "https://github.com/jlucaso1/zed.git", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5", package = "util_macros" }
sum_tree = { git = "https://github.com/jlucaso1/zed.git", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5", package = "sum_tree" }
refineable = { git = "https://github.com/jlucaso1/zed.git", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5", package = "refineable" }
derive_refineable = { git = "https://github.com/jlucaso1/zed.git", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5", package = "derive_refineable" }
http_client = { git = "https://github.com/jlucaso1/zed.git", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5", package = "http_client" }
perf = { git = "https://github.com/jlucaso1/zed.git", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5", package = "perf" }
zlog = { git = "https://github.com/jlucaso1/zed.git", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5", package = "zlog" }
ztracing = { git = "https://github.com/jlucaso1/zed.git", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5", package = "ztracing" }
