[package]
name = "wacore"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.3"
aes-gcm = { version = "0.10.2", features = [
    "aes",
    "alloc",
], default-features = false }
anyhow = { version = "1.0", default-features = false }
async-trait = "0.1.88"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bytes = { version = "1.5", default-features = false }
cbc = { version = "0.1.2", features = ["alloc"] }

# Time handling
chrono = { version = "0.4", features = [
    "now",
    "serde",
], default-features = false }
cipher = "0.4"

# Zlib decompression for WABinary
flate2 = { version = "1.0", default-features = false, features = [
    "any_zlib",
    "libz-sys",
] }
hex = { version = "0.4", features = ["alloc"], default-features = false }
hkdf = "0.12.3"
hmac = "0.12.1"
libsignal-protocol = { workspace = true }
log = "0.4.27"
md5 = "0.8.0"
once_cell = { version = "1.19", default-features = false, features = ["std"] }
phf = { version = "0.12.1", features = ["macros"] }
prost = { version = "0.14.1", default-features = false }

# Cryptography
rand = { version = "0.9" }
rand_core = "0.9"
serde = { version = "1.0.188", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1.0"
sha2 = "0.10.6"
smallvec = "1.13"
thiserror = "2.0.12"
waproto = { workspace = true }

[build-dependencies]
phf_codegen = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
