[package]
name = "waproto"
version = "0.5.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Protocol Buffers definitions for WhatsApp"

[features]
default = []
generate = ["dep:buffa-build"]
serde-deserialize = []
serde-snake-case = ["serde-deserialize"]

[dependencies]
buffa = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }

[build-dependencies]
buffa-build = { workspace = true, optional = true }
