[package]
name = "whatsapp-rust-ureq-http-client"
version = "0.2.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Ureq-based HTTP client implementation for whatsapp-rust"

[dependencies]
anyhow = { version = "1.0", default-features = false }
async-trait = "0.1.89"
tokio = { version = "1.49.0", features = ["rt"] }
ureq = { version = "3.1.4", default-features = false, features = [
    "rustls",
    "json",
] }
wacore = { path = "../../wacore", version = "0.2.0" }
