[package]
name = "whatsapp-rust-redb-storage"
version = "0.2.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Redb storage backend for whatsapp-rust - high-performance embedded key-value store"

[dependencies]
async-trait = "0.1.89"
bincode = { version = "2.0.1", features = ["serde"] }
hex = "0.4"
log = "0.4.29"
prost = { version = "0.14.1", default-features = false }
redb = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["sync", "rt"] }

# Workspace dependencies
wacore = { path = "../../wacore", version = "0.2.0" }
waproto = { path = "../../waproto", version = "0.2.0" }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
