[package]
name = "whatsapp-rust-redb-storage"
version = "0.5.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Redb storage backend for whatsapp-rust - high-performance embedded key-value store"

[dependencies]
async-trait = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
redb = "4.0.0"
rmp-serde = "1.3.1"
serde = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
wacore = { workspace = true }
waproto = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
