[package]
name = "whatsapp-rust-sqlite-storage"
version = "0.1.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "SQLite storage backend for whatsapp-rust"

[dependencies]
async-trait = "0.1.89"
bincode = { version = "2.0.1", features = ["serde"] }
diesel = { version = "2.3.5", default-features = false, features = [
    "sqlite",
    "r2d2",
    "32-column-tables",
] }
diesel_migrations = { version = "2.3.1", default-features = false, features = [
    "sqlite",
] }
libsqlite3-sys = { version = "0.35.0", default-features = false, features = [
    "bundled",
] }
log = "0.4.29"
prost = { version = "0.14.1", default-features = false }
serde_json = "1"
tokio = { version = "1.48.0", features = ["sync", "rt"] }

# Workspace dependencies
wacore = { path = "../../wacore", version = "0.1.0" }
waproto = { path = "../../waproto", version = "0.1.0" }
