[package]
name = "whatsapp-rust-tokio-transport"
version = "0.1.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Tokio-based WebSocket transport for whatsapp-rust"

[dependencies]
anyhow = { version = "1.0", default-features = false }
async-trait = "0.1.88"
bytes = { version = "1.5", default-features = false }
futures-util = { version = "0.3.31", default-features = false, features = [
    "sink",
    "alloc",
    "std",
] }
http = "1.4.0"
log = "0.4.27"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio = { version = "1.47.1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-websockets = { version = "0.13.0", features = [
    "client",
    "rustls-webpki-roots",
    "rand",
    "ring",
] }
wacore = { path = "../../wacore", version = "0.1.0" }
